tests/snapshots/examples_fixtures/type_system__failing__09_compile_typed_call_return_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/09_compile_typed_call_return_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `n` does not match its type annotation.

  examples/type_system/failing/09_compile_typed_call_return_mismatch.flx:31:14
   |
31 | let n: Int = make_label()
   |              ^^^^^^^^^^^^
   |              ------------ this value has type `String`

   |        --- but `n` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `n` to a `Int` value or update the annotation.
== stdout ==
<not executed>
